--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <title>My Ordinary Life Store</title>
 </head>
 <body>
@@ -13,18 +14,20 @@
         <input type="text" placeholder="Digite Aqui">
         <ul>
             <li><a href="#">Ajuda</a></li>
-            <li><a href="#">Cadastro / Login</a></li>
+            <li><a href="#">Cadastro/Login</a></li>
             <li><a href="#">Carrinho</a></li>
         </ul>
     </header>
     
-    <div>promoção</div>
-    <div>camiseta</div>
-    <div>casaco</div>
-    <div>decorações</div>
-    <div>lorem</div>
-    <div>ipsum</div>
-    <div>dolor sit</div>
-    <div>amet pae</div>
+    <ul class="categorias">
+        <li>promoção</li>
+        <li>camisetas</li>
+        <li>casacos</li>
+        <li>vasos de planta</li>
+        <li>almofadas</li>
+        <li>pelucias</li>
+        <li>lorem ips</li>
+        <li>dolor sit</li>
+    </ul>
 </body>
 </html>
