--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+        rel="stylesheet">
     <title>My Ordinary Life Store</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -25,16 +27,17 @@
             <li><a href="#">Carrinho</a></li>
         </ul>
     </header>
-<<<<<<< HEAD
 
-    <!-- <div>promoção</div>
-    <div>camiseta</div>
-    <div>casaco</div>
-    <div>decorações</div>
-    <div>lorem</div>
-    <div>ipsum</div>
-    <div>dolor sit</div>
-    <div>amet pae</div> -->
+    <ul class="categorias">
+        <li>promoção</li>
+        <li>camisetas</li>
+        <li>casacos</li>
+        <li>vasos de planta</li>
+        <li>almofadas</li>
+        <li>pelucias</li>
+        <li>lorem ips</li>
+        <li>dolor sit</li>
+    </ul>
 
     <!-- CAROUSEL -->
     <div class="carousel-item active">
@@ -80,9 +83,6 @@
         </button>
     </div>
 
-    <ul>
-        
-    </ul>
 
     <!-- BOOTSTRAP E FONT-AWESOME -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/js/all.min.js"
@@ -91,19 +91,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-=======
-    
-    <ul class="categorias">
-        <li>promoção</li>
-        <li>camisetas</li>
-        <li>casacos</li>
-        <li>vasos de planta</li>
-        <li>almofadas</li>
-        <li>pelucias</li>
-        <li>lorem ips</li>
-        <li>dolor sit</li>
-    </ul>
->>>>>>> 3a50acfc2d4546f48cc0325485a04d5d03281c36
 </body>
 
 </html>
