--- a/index.html
+++ b/index.html
@@ -40,18 +40,7 @@
     </ul>
 
     <!-- CAROUSEL -->
-    <div class="carousel-item active">
-        <img src="./img/1.png" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-        <img src="img/2.png" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-        <img src="img/3.png" class="d-block w-100" alt="...">
-    </div>
-    </div>
-
-    <div id="carrosel" class="carousel slide" data-bs-ride="carousel">
+    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
                 aria-current="true" aria-label="Slide 1"></button>
@@ -62,7 +51,7 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="./img/1.png" class="d-block w-100" alt="...">
+                <img src="img/1.png" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
                 <img src="img/2.png" class="d-block w-100" alt="...">
