--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 <body>
     <header>
         <h1>STORE LOGO</h1>
-        <input type="text" placeholder="Digite Aqui">
+        <input type="text" placeholder="Digite Aqui" class="barra-pesquisa">
         <ul>
-            <li><a href="#">Ajuda</a></li>
-            <li><a href="#">Cadastro/Login</a></li>
-            <li><a href="#">Carrinho</a></li>
+            <li><a href="#"> <i class="fa-solid fa-circle-question"></i>Ajuda</a></li>
+            <li><a href="#"><i class="fa-solid fa-user"></i> Cadastro/Login</a></li>
+            <li><a href="#"><i class="fa-solid fa-cart-shopping"></i> Carrinho</a></li>
         </ul>
     </header>
 
@@ -40,7 +40,18 @@
     </ul>
 
     <!-- CAROUSEL -->
-    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-item active">
+        <img src="./img/1.png" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+        <img src="img/2.png" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+        <img src="img/3.png" class="d-block w-100" alt="...">
+    </div>
+    </div>
+
+    <div id="carrosel" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
                 aria-current="true" aria-label="Slide 1"></button>
@@ -51,7 +62,7 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="img/1.png" class="d-block w-100" alt="...">
+                <img src="./img/1.png" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
                 <img src="img/2.png" class="d-block w-100" alt="...">
