--- a/index.html
+++ b/index.html
@@ -82,7 +82,27 @@
             <span class="visually-hidden">Next</span>
         </button>
     </div>
-
+    <!-- embaixo do carrosel -->
+    <section class="xd">
+        <div class="cardlist">
+            <div class="cardo">
+                <i class="fa-solid fa-truck"></i>
+                <h3><a href="#"><span>FRETE GRÁTIS BRASIL</span> NAS COMPRAS ACIMA DE R$199,90</a></h3>
+            </div>
+            <div class="cardo">
+                <i class="fa-solid fa-credit-card"></i>
+                <h3>TODO O SITE EM ATÉ <span>10X SEM JUROS</span> PARCELA MÍNIMA DE R$20,00*</h3>
+            </div>
+            <div class="cardo">
+                <i class="fa-solid fa-power-off"></i>
+                <h3><a href="#"><span>1ª TROCA GRÁTIS</span>, COMPRE NO E-COMMERCE E TROQUE NAS LOJAS FÍSICAS</a></h3>
+            </div>
+            <div class="cardo">
+                <i class="fa-solid fa-barcode"></i>
+                <h3><span>5% DE DESCONTO</span>À VISTA NO <span>BOLETO BANCÁRIO OU PIX</span></h3>
+            </div>
+        </div>
+    </section>
 
     <!-- BOOTSTRAP E FONT-AWESOME -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/js/all.min.js"
