--- a/index.html
+++ b/index.html
@@ -19,13 +19,19 @@
 
 <body>
     <header>
-        <h1>STORE LOGO</h1>
-        <input type="text" placeholder="Digite Aqui" class="barra-pesquisa">
-        <ul>
-            <li><a href="#"> <i class="fa-solid fa-circle-question"></i>Ajuda</a></li>
-            <li><a href="#"><i class="fa-solid fa-user"></i> Cadastro/Login</a></li>
-            <li><a href="#"><i class="fa-solid fa-cart-shopping"></i> Carrinho</a></li>
-        </ul>
+        <div class="header2">
+            <h1>STORE LOGO</h1>
+            <div class="searc">
+                <input type="text" placeholder="Digite Aqui" class="barra-pesquisa">
+                <i class="fa-solid fa-magnifying-glass"></i>
+            </div>
+            <ul>
+                <li><a href="#"> <i class="fa-solid fa-circle-question"></i>Ajuda</a></li>
+                <li><a href="#"><i class="fa-solid fa-user"></i> Cadastro/Login</a></li>
+                <li><a href="#"><i class="fa-solid fa-cart-shopping"></i> Carrinho</a></li>
+            </ul>
+        </div>
+
     </header>
 
     <ul class="categorias">
